--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- CCS -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Hello, world!</title>
+    <title>Rumah UI</title>
     <!-- Font Awesome -->
     <link href="fontawesome/css/all.css" rel="stylesheet"> <!--load all styles -->
   </head>
